# noPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  application.cpp  configureOCIO.cpp  imageChannelUtils.h  imagePlane.cpp  imagePlane.h  noPlayer.cpp  noPlayer.h  oglRoutine.cpp  scanImageFile.cpp  shaderUniforms.h  waveformPanel.cpp  waveformPanel.h
